<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>tripleo.elijah</groupId>
		<artifactId>elevated-potential</artifactId>
		<version>2024.elevated-potential.2</version>
	</parent>
	<artifactId>elevated-potential-core-impl</artifactId>
	<version>2024.elevated-potential.2</version>
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>

			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.26.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>4.2.2</version>
		</dependency>

		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>elevated-potential</artifactId>
			<version>2024.elevated-potential.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>elevated-potential-core-api-xxx</artifactId>
			<version>2024.elevated-potential.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>elevated-potential-core-api</artifactId>
			<version>2024.elevated-potential.2</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
